# Sumo-RL-Traffic-Control

./: README.md  main.py  pyproject.toml  sumo_py_connection.py
.ipynb_checkpoints/: train_dqn-checkpoint.ipynb
data/: hourly_flow_percentage.csv  modlinska_swiatowida_kolacinska_net.net.xml  modlinska_swiatowida_kolacinska_net.sumocfg  modlinska_swiatowida_kolacinska_net.xml  traffic_demand.rou.xml  traffic_modeled_24h_modlinska_swiatowida_kolacinska.csv  traffic_modlinska_swiatowida_kolacinska.csv
data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  data_preparation-checkpoint.ipynb
logs/: dqn.monitor.csv
