[project]
name = "sumo-rl-traffic-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "shimmy>=2.0.1",
    "stable-baselines3>=2.8.0",
    "sumo-rl>=1.4.5",
]
